--- a/tis.config
+++ b/tis.config
@@ -3,5 +3,10 @@
     "name": "Test 01",
     "files": ["tests/test_01.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src"
+  },
+  {
+    "name": "Test 02",
+    "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
+    "compilation_cmd": "-I src"
   }
 ]
