--- a/tis.config
+++ b/tis.config
@@ -8,5 +8,10 @@
     "name": "Test 02",
     "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src"
+  },
+  {
+    "name": "Test 03",
+    "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
+    "compilation_cmd": "-I src"
   }
 ]
