--- a/tis.config
+++ b/tis.config
@@ -1,17 +1,17 @@
 [
   {
-    "name": "Test 01",
+    "name": "Undefined variable",
     "files": ["tests/test_01.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src"
   },
   {
-    "name": "Test 02",
-    "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
+    "name": "Volatile variable",
+    "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src"
   },
   {
-    "name": "Test 03",
-    "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
+    "name": "Imprecise lvalue",
+    "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src"
   }
 ]
