--- a/tis.config
+++ b/tis.config
@@ -5,13 +5,31 @@
     "compilation_cmd": "-I src"
   },
   {
+    "name": "Undefined variable - NO RESULTS",
+    "files": ["tests/test_01.c", "src/caesar.c", "src/gen_test.c"],
+    "compilation_cmd": "-I src",
+    "raw_options": { "-no-results": "true" }
+  },
+  {
     "name": "Volatile variable",
     "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
-    "compilation_cmd": "-I src"
+    "compilation_cmd": "-I src",
+  },
+  {
+    "name": "Volatile variable - NO RESULTS",
+    "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
+    "compilation_cmd": "-I src",
+    "raw_options": { "-no-results": "true" }
   },
   {
     "name": "Imprecise lvalue",
     "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
-    "compilation_cmd": "-I src"
+    "compilation_cmd": "-I src",
+  },
+  {
+    "name": "Imprecise lvalue - NO RESULTS",
+    "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
+    "compilation_cmd": "-I src",
+    "raw_options": { "-no-results": "true" }
   }
 ]
