--- a/tis.config
+++ b/tis.config
@@ -13,7 +13,7 @@
   {
     "name": "Volatile variable",
     "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
-    "compilation_cmd": "-I src",
+    "compilation_cmd": "-I src"
   },
   {
     "name": "Volatile variable - NO RESULTS",
@@ -24,7 +24,7 @@
   {
     "name": "Imprecise lvalue",
     "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
-    "compilation_cmd": "-I src",
+    "compilation_cmd": "-I src"
   },
   {
     "name": "Imprecise lvalue - NO RESULTS",
