--- a/tis.config
+++ b/tis.config
@@ -8,7 +8,7 @@
     "name": "Undefined variable - NO RESULTS",
     "files": ["tests/test_01.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src",
-    "raw_options": { "-no-results": "true" }
+    "no-results": true
   },
   {
     "name": "Volatile variable",
@@ -19,7 +19,7 @@
     "name": "Volatile variable - NO RESULTS",
     "files": ["tests/test_03.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src",
-    "raw_options": { "-no-results": "true" }
+    "no-results": true
   },
   {
     "name": "Imprecise lvalue",
@@ -30,6 +30,6 @@
     "name": "Imprecise lvalue - NO RESULTS",
     "files": ["tests/test_02.c", "src/caesar.c", "src/gen_test.c"],
     "compilation_cmd": "-I src",
-    "raw_options": { "-no-results": "true" }
+    "no-results": true
   }
 ]
